--- a/client/src/components/ShowDetails/style.css
+++ b/client/src/components/ShowDetails/style.css
@@ -5,6 +5,6 @@
 }
 
 .btn {
-      background-color: seagreen;
+      background-color:  #005e66;
       font-weight: bold;
   }
