--- a/client/src/components/TvCard/style.css
+++ b/client/src/components/TvCard/style.css
@@ -11,5 +11,5 @@
 }
 
 .btn-outline-light {
-    margin-bottom: 15px;
+    margin: 15px;
 }
